Changelog
=========


2.3.1 (unreleased)
------------------

- Nothing changed yet.


2.3.0 (2013-09-02)
------------------

- Implement simplelayout block adapter.
  The adapter adds publisher support for simplelayout block settings,
  such as dimensions, height, position etc.
  [jone]


2.2 (2013-07-18)
----------------

- Implemented adapter to publish ShopItem Variations
  (those are stored in annotations and therefore haven't been published before).
  [lgraf]


2.1.1 (2013-06-21)
------------------

- Fix Unauthorized exception in back references adapter
  caused by Products.PloneHotfix20130618.
  [jone]


2.1.0 (2013-06-13)
------------------

- Add geo data adapter to publish coordinates of c.geo.
  [mathias.leimgruber]


2.0.1 (2013-06-03)
------------------

- Do not publish properties of site root.
  [jone]


2.0 (2013-05-24)
----------------

- Add support for plone.namedfile in portlets.
  [jone]

- Add portlet settings support for Plone 4.
  [jone]

- Implement better blob file detection (ftw.file support).
  [jone]

- Fix setting files / blobs: the decoder (f.p.receiver) takes care of the value.
  [jone]

- Support for transporting datetime objects.
  [jone]

- Improve marker interface adapter.
  Do not remove / readd all interfaces, but only apply differences.
  [jone]

- Drop Plone 3 support.
  [jone]


1.2 (2011-04-06)
----------------

- Cleanup, move to github (https://github.com/4teamwork/ftw.publisher.core) and
  prepare for release.
  [jone]


1.1 (2010-09-27)
----------------

- Removed archetypes.schemaextender, since we can use obj.Schema() for getting
  all the fields
  [jone]

- Added new warning states
  [jone]


1.0c4 (2010-07-21)
------------------

- Added translations for the states
  [jone]


1.0c3 (2010-06-24)
------------------

- Removed encoding stuff for portlets, that now should be done be the
  better encoding / decoding.
  [jone]

- Added string encoding / decoding methods which work with json
  [jone]


1.0c2 (2010-06-22)