@@ -1,5 +1,6 @@
 from plone.directives import form
 from plone.namedfile.field import NamedFile
+from plone.namedfile.field import NamedImage
 
 
 class IFoo(form.Schema):
@@ -10,3 +11,9 @@ class IFileSchema(form.Schema):
 
     form.primary('file')
     file = NamedFile(title=u'File')
+
+
+class IImageSchema(form.Schema):
+
+    form.primary('image')
+    image = NamedImage(title=u'image')
