@@ -1,4 +1,5 @@
 <object name="portal_types">
     <object name="ExampleDxType" meta_type="Dexterity FTI" />
     <object name="DXFile" meta_type="Dexterity FTI" />
+    <object name="DXImage" meta_type="Dexterity FTI" />
 </object>
